Treat admin reactivation as recent activity